[project]
name = "KAITITU"
dynamic = ["version"]
description = "Database administration tool"
authors = [
    {name = "Kelvin S. Amorim", email = "kelvin.amorim@silverlayer.space"},
]
dependencies = ["polars>=1.22.0", "sqlalchemy>=2.0.38", "cx-Oracle>=8.3.0", "pyodbc>=5.2.0", "psycopg2>=2.9.10", "mysqlclient>=2.2.7"]
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
version = {source = "file", path = "src/kaititu/__init__.py"}


[tool.pdm.scripts]
test = {cmd = "pytest", env_file = ".venv/.env"}
doc = {cmd = "sphinx-build -M html docs/source docs/build"}


[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = "src"
testpaths = "tests"


[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "sphinx>=8.1.3",
    "furo>=2024.8.6",
]
