[project]
name = "kaititu"
dynamic = ["version"]
description = "It is a library to deal with operational and analytical tasks on popular database management system."
authors = [
    {name = "Kelvin S. Amorim", email = "kelvin.amorim@silverlayer.space"},
]
dependencies = [
    "polars>=1.24.0,<2.0.0",
    "sqlalchemy>=2.0.38,<3.0.0",
    "pyodbc>=5.2.0,<6.0.0",
    "psycopg2>=2.9.10,<3.0.0",
    "mysqlclient>=2.2.7,<3.0.0",
    "oracledb>=2.5.1,<3.0.0"
]
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
version = {source = "file", path = "src/kaititu/__init__.py"}


[tool.pdm.scripts]
test = {cmd = "pytest", env_file = ".venv/.env"}
doc = {cmd = "sphinx-build -M html docs/source docs/build"}


[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = "src"
testpaths = "tests"

[project.urls]
Repository = "https://github.com/silverlayer/kaititu.git"
Documentation = "https://silverlayer.github.io/kaititu"
Issues = "https://github.com/silverlayer/kaititu/issues"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "sphinx>=8.1.3",
    "furo>=2024.8.6",
]
